Fix works section contrast ratio

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ h2.lets-connect {
   line-height: 16px;
   letter-spacing: 0;
   text-align: left;
-  color: #7a869a;
+  color: #69768C;
 }
 
 .portfolio p {
@@ -188,7 +188,7 @@ h2.lets-connect {
 
 .tech-list-portfolio li {
   font-family: "Poppins", sans-serif;
-  color: #6070ff;
+  color: #3D51FF;
   font-size: 12px;
   font-weight: 500;
   line-height: 16px;
